test/compflags/ferguson/resolve-concrete-fns.good
resolve-concrete-fns.chpl:1: In function 'foo':
resolve-concrete-fns.chpl:2: error: cannot initialize 'x' of type 'int(64)' from '"hello"'
