test/compflags/ferguson/resolve-concrete-fns.chpl
proc foo() {
  var x: int = "hello";
  return 1;
}
